settings: Fix gap between lines
Increase length of setting separators to reach the horizontal
line below

--- a/src/rtrc.css
+++ b/src/rtrc.css
@@ -222,7 +222,7 @@
 .mw-rtrc-settings .sep {
 	float: left;
 	border-right: 2px ridge rgb(247, 246, 248);
-	height: 68px;
+	height: 78px;
 }
 
 .mw-rtrc-settings .sep2 {
